Update new icons

--- a/401.html
+++ b/401.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:21:25 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:27:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79270" data-wf-site="6934202faf17f8cbbfc79092" lang="en">
 <head>
   <meta charset="utf-8">
@@ -35,71 +35,71 @@
             <div>
               <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35ddd7-5d35ddd5" class="nav__container">
                 <div href="#" id="w-node-eecda7ff-8477-22d2-5106-0fc45d35ddd8-5d35ddd5" class="nav__logo-wrap logo--tablet">
-                  <a href="https://www.nords.fi" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
+                  <a href="index.html" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
                 </div>
                 <nav role="navigation" id="w-node-eecda7ff-8477-22d2-5106-0fc45d35dddb-5d35ddd5" class="nav__menu-wrap w-nav-menu">
                   <div href="#" class="nav__logo-wrap">
-                    <a href="https://www.nords.fi" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
+                    <a href="index.html" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
                   </div>
                   <div class="nav__menu menu--desktop">
-                    <a href="https://www.nords.fi" class="nav-link w-inline-block">
+                    <a href="index.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Koti</div>
                       </div>
                     </a>
-                    <a href="tiimi" class="nav-link w-inline-block">
+                    <a href="tiimi.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Tiimi</div>
                       </div>
                     </a>
-                    <a href="hinnasto" class="nav-link w-inline-block">
+                    <a href="hinnasto.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Hinnasto</div>
                       </div>
                     </a>
-                    <a href="tyot" class="nav-link w-inline-block">
+                    <a href="tyot.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Työt</div>
                       </div>
                     </a>
-                    <a href="asiakaspalautteet" class="nav-link w-inline-block">
+                    <a href="asiakaspalautteet.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Asiakaspalautteet</div>
                       </div>
                     </a>
-                    <a href="ota-yhteytta" class="nav-link w-inline-block">
+                    <a href="ota-yhteytta.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Ota yhteyttä</div>
                       </div>
                     </a>
                   </div>
                   <div class="nav__menu menu--tablet">
-                    <a href="https://www.nords.fi" class="nav-link w-inline-block">
+                    <a href="index.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Koti</div>
                       </div>
                     </a>
-                    <a href="tiimi" class="nav-link w-inline-block">
+                    <a href="tiimi.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Tiimi</div>
                       </div>
                     </a>
-                    <a href="hinnasto" class="nav-link w-inline-block">
+                    <a href="hinnasto.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Hinnasto</div>
                       </div>
                     </a>
-                    <a href="tyot" class="nav-link w-inline-block">
+                    <a href="tyot.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Työt</div>
                       </div>
                     </a>
-                    <a href="asiakaspalautteet" class="nav-link w-inline-block">
+                    <a href="asiakaspalautteet.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Asiakaspalautteet</div>
                       </div>
                     </a>
-                    <a href="ota-yhteytta" class="nav-link w-inline-block">
+                    <a href="ota-yhteytta.html" class="nav-link w-inline-block">
                       <div class="nav-link__label-wrap">
                         <div class="nav-link__label">Ota yhteyttä</div>
                       </div>
@@ -107,7 +107,7 @@
                   </div>
                 </nav>
                 <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35dec2-5d35ddd5" class="nav__btn">
-                  <a href="ota-yhteytta" data-wf--button---primary-overlay--variant="alternate" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component w-variant-7f552dd8-6f55-9529-2d4e-a42d88c80aeb btn--overlay w-inline-block">
+                  <a href="ota-yhteytta.html" data-wf--button---primary-overlay--variant="alternate" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component w-variant-7f552dd8-6f55-9529-2d4e-a42d88c80aeb btn--overlay w-inline-block">
                     <div class="btn__label-wrap btn--overlay">
                       <div class="btn__label btn--overlay">Ota yhteyttä</div>
                       <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
@@ -203,13 +203,13 @@
               </div>
               <div class="modal__links">
                 <div class="modal__link">
-                  <a href="https://www.nords.fi">Home 01</a>
+                  <a href="index.html">Home 01</a>
                 </div>
                 <div class="modal__link">
-                  <a href="home/home-02">Home 02</a>
+                  <a href="home/home-02.html">Home 02</a>
                 </div>
                 <div class="modal__link">
-                  <a href="home/home-03">Home 03</a>
+                  <a href="home/home-03.html">Home 03</a>
                 </div>
               </div>
             </div>
@@ -226,13 +226,13 @@
               </div>
               <div class="modal__links">
                 <div class="modal__link">
-                  <a href="product/product-01">Product 01</a>
+                  <a href="product/product-01.html">Product 01</a>
                 </div>
                 <div class="modal__link">
-                  <a href="product/product-02">Product 02</a>
+                  <a href="product/product-02.html">Product 02</a>
                 </div>
                 <div class="modal__link">
-                  <a href="product/product-03">Product 03</a>
+                  <a href="product/product-03.html">Product 03</a>
                 </div>
               </div>
             </div>
@@ -249,13 +249,13 @@
               </div>
               <div class="modal__links">
                 <div class="modal__link">
-                  <a href="contact/contact-01">Contact 01</a>
+                  <a href="contact/contact-01.html">Contact 01</a>
                 </div>
                 <div class="modal__link">
-                  <a href="contact/contact-02">Contact 02</a>
+                  <a href="contact/contact-02.html">Contact 02</a>
                 </div>
                 <div class="modal__link">
-                  <a href="ota-yhteytta">Contact 03</a>
+                  <a href="ota-yhteytta.html">Contact 03</a>
                 </div>
               </div>
             </div>
@@ -272,19 +272,19 @@
               </div>
               <div class="modal__links">
                 <div class="modal__link">
-                  <a href="hinnasto">Pricing</a>
+                  <a href="hinnasto.html">Pricing</a>
                 </div>
                 <div class="modal__link">
-                  <a href="tiimi">Company</a>
+                  <a href="tiimi.html">Company</a>
                 </div>
                 <div class="modal__link">
-                  <a href="tyot">Career</a>
+                  <a href="tyot.html">Career</a>
                 </div>
                 <div class="modal__link">
-                  <a href="company/demo">Demo</a>
+                  <a href="company/demo.html">Demo</a>
                 </div>
                 <div class="modal__link">
-                  <a href="company/coming-soon">Coming Soon</a>
+                  <a href="company/coming-soon.html">Coming Soon</a>
                 </div>
               </div>
             </div>
@@ -330,13 +330,13 @@
               </div>
               <div class="modal__links">
                 <div class="modal__link">
-                  <a href="resource/resources">Resources</a>
+                  <a href="resource/resources.html">Resources</a>
                 </div>
                 <div class="modal__link">
-                  <a href="resource/guide">Guide</a>
+                  <a href="resource/guide.html">Guide</a>
                 </div>
                 <div class="modal__link">
-                  <a href="resource/blog">Blog</a>
+                  <a href="resource/blog.html">Blog</a>
                 </div>
               </div>
             </div>
@@ -353,13 +353,13 @@
               </div>
               <div class="modal__links">
                 <div class="modal__link">
-                  <a href="palveluehdot">Terms &amp; Conditions</a>
+                  <a href="palveluehdot.html">Terms &amp; Conditions</a>
                 </div>
                 <div class="modal__link">
-                  <a href="tietosuojaseloste">Privacy Policy</a>
+                  <a href="tietosuojaseloste.html">Privacy Policy</a>
                 </div>
                 <div class="modal__link">
-                  <a href="legal/cookie-policy">Cookie Policy</a>
+                  <a href="legal/cookie-policy.html">Cookie Policy</a>
                 </div>
               </div>
             </div>
@@ -376,13 +376,13 @@
               </div>
               <div class="modal__links">
                 <div class="modal__link">
-                  <a href="auth/sign-in">Sign In</a>
+                  <a href="auth/sign-in.html">Sign In</a>
                 </div>
                 <div class="modal__link">
-                  <a href="auth/sign-up">Sign Up</a>
+                  <a href="auth/sign-up.html">Sign Up</a>
                 </div>
                 <div class="modal__link">
-                  <a href="auth/password-reset">Password Reset</a>
+                  <a href="auth/password-reset.html">Password Reset</a>
                 </div>
               </div>
             </div>
@@ -399,13 +399,13 @@
               </div>
               <div class="modal__links">
                 <div class="modal__link">
-                  <a href="search">Search</a>
+                  <a href="search.html">Search</a>
                 </div>
                 <div class="modal__link">
-                  <a href="401" aria-current="page" class="w--current">Login</a>
+                  <a href="401.html" aria-current="page" class="w--current">Login</a>
                 </div>
                 <div class="modal__link">
-                  <a href="404">Not Found</a>
+                  <a href="404.html">Not Found</a>
                 </div>
               </div>
             </div>
@@ -422,16 +422,16 @@
               </div>
               <div class="modal__links">
                 <div class="modal__link">
-                  <a href="documentation/instructions">Instructions</a>
+                  <a href="documentation/instructions.html">Instructions</a>
                 </div>
                 <div class="modal__link">
-                  <a href="documentation/style-guide">Style Guide</a>
+                  <a href="documentation/style-guide.html">Style Guide</a>
                 </div>
                 <div class="modal__link">
-                  <a href="documentation/licenses">Licenses</a>
+                  <a href="documentation/licenses.html">Licenses</a>
                 </div>
                 <div class="modal__link">
-                  <a href="documentation/changelog">Changelog</a>
+                  <a href="documentation/changelog.html">Changelog</a>
                 </div>
               </div>
             </div>
@@ -478,7 +478,7 @@
                 </div>
               </div>
               <div class="cta__btn btn--gap-lg">
-                <a href="contact/contact-01" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
+                <a href="contact/contact-01.html" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
                   <div class="btn__label-wrap">
                     <div class="btn__label">Ota yhteyttä</div>
                     <div class="btn__label--hidden">Ota yhteyttä</div>
@@ -508,7 +508,7 @@
                 </div>
               </div>
               <div class="cta__btn btn--gap-lg">
-                <a href="company/demo" data-wf--button---secondary--variant="primary" data-w-id="2b168537-cca3-2386-569d-6c2cf43f0220" class="btn__component btn--secondary w-inline-block">
+                <a href="company/demo.html" data-wf--button---secondary--variant="primary" data-w-id="2b168537-cca3-2386-569d-6c2cf43f0220" class="btn__component btn--secondary w-inline-block">
                   <div class="btn__label-wrap btn--secondary">
                     <div class="btn__label btn--secondary">Tutustu toimintaamme</div>
                     <div class="btn__label--hidden btn--secondary">Tutustu toimintaamme</div>
@@ -541,7 +541,7 @@
                 <div href="#" id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a1a1-12c5a19d" class="footer__brand">
                   <div class="footer__about">
                     <div href="#" aria-label="brand logo" class="footer__logo-link">
-                      <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="https://www.nords.fi" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="" class="logo__embed"></a>
+                      <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="index.html" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="" class="logo__embed"></a>
                     </div>
                     <div class="footer__tagline">
                       <p>Me teemme sivut, jotka tukevat kasvua.</p>
@@ -564,22 +564,22 @@
                     </div>
                     <div class="footer__links">
                       <div class="footer__link">
-                        <a href="https://www.nords.fi">Koti</a>
+                        <a href="index.html">Koti</a>
                       </div>
                       <div class="footer__link">
-                        <a href="tiimi">Tiimi</a>
+                        <a href="tiimi.html">Tiimi</a>
                       </div>
                       <div class="footer__link">
-                        <a href="hinnasto">Hinnasto</a>
+                        <a href="hinnasto.html">Hinnasto</a>
                       </div>
                       <div class="footer__link">
-                        <a href="tyot">Työt</a>
+                        <a href="tyot.html">Työt</a>
                       </div>
                       <div class="footer__link">
-                        <a href="asiakaspalautteet">Asiakaspalautteet</a>
+                        <a href="asiakaspalautteet.html">Asiakaspalautteet</a>
                       </div>
                       <div class="footer__link">
-                        <a href="ota-yhteytta">Ota yhteyttä</a>
+                        <a href="ota-yhteytta.html">Ota yhteyttä</a>
                       </div>
                     </div>
                   </div>
@@ -613,10 +613,10 @@
                   </div>
                   <div class="footer__legal">
                     <div class="footer__link link--legal">
-                      <a href="tietosuojaseloste">Tietosuojaseloste</a>
+                      <a href="tietosuojaseloste.html">Tietosuojaseloste</a>
                     </div>
                     <div class="footer__link link--legal">
-                      <a href="palveluehdot">Palveluehdot</a>
+                      <a href="palveluehdot.html">Palveluehdot</a>
                     </div>
                   </div>
                 </div>
