--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:21:25 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 16 2025 09:27:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc791d5" data-wf-site="6934202faf17f8cbbfc79092" lang="en">
 <head>
   <meta charset="utf-8">
@@ -27,71 +27,71 @@
               <div>
                 <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35ddd7-5d35ddd5" class="nav__container">
                   <div href="#" id="w-node-eecda7ff-8477-22d2-5106-0fc45d35ddd8-5d35ddd5" class="nav__logo-wrap logo--tablet">
-                    <a href="https://www.nords.fi" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
+                    <a href="index.html" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
                   </div>
                   <nav role="navigation" id="w-node-eecda7ff-8477-22d2-5106-0fc45d35dddb-5d35ddd5" class="nav__menu-wrap w-nav-menu">
                     <div href="#" class="nav__logo-wrap">
-                      <a href="https://www.nords.fi" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
+                      <a href="index.html" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
                     </div>
                     <div class="nav__menu menu--desktop">
-                      <a href="https://www.nords.fi" class="nav-link w-inline-block">
+                      <a href="index.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Koti</div>
                         </div>
                       </a>
-                      <a href="tiimi" class="nav-link w-inline-block">
+                      <a href="tiimi.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Tiimi</div>
                         </div>
                       </a>
-                      <a href="hinnasto" aria-current="page" class="nav-link w-inline-block w--current">
+                      <a href="hinnasto.html" aria-current="page" class="nav-link w-inline-block w--current">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Hinnasto</div>
                         </div>
                       </a>
-                      <a href="tyot" class="nav-link w-inline-block">
+                      <a href="tyot.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Työt</div>
                         </div>
                       </a>
-                      <a href="asiakaspalautteet" class="nav-link w-inline-block">
+                      <a href="asiakaspalautteet.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Asiakaspalautteet</div>
                         </div>
                       </a>
-                      <a href="ota-yhteytta" class="nav-link w-inline-block">
+                      <a href="ota-yhteytta.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Ota yhteyttä</div>
                         </div>
                       </a>
                     </div>
                     <div class="nav__menu menu--tablet">
-                      <a href="https://www.nords.fi" class="nav-link w-inline-block">
+                      <a href="index.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Koti</div>
                         </div>
                       </a>
-                      <a href="tiimi" class="nav-link w-inline-block">
+                      <a href="tiimi.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Tiimi</div>
                         </div>
                       </a>
-                      <a href="hinnasto" aria-current="page" class="nav-link w-inline-block w--current">
+                      <a href="hinnasto.html" aria-current="page" class="nav-link w-inline-block w--current">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Hinnasto</div>
                         </div>
                       </a>
-                      <a href="tyot" class="nav-link w-inline-block">
+                      <a href="tyot.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Työt</div>
                         </div>
                       </a>
-                      <a href="asiakaspalautteet" class="nav-link w-inline-block">
+                      <a href="asiakaspalautteet.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Asiakaspalautteet</div>
                         </div>
                       </a>
-                      <a href="ota-yhteytta" class="nav-link w-inline-block">
+                      <a href="ota-yhteytta.html" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Ota yhteyttä</div>
                         </div>
@@ -99,7 +99,7 @@
                     </div>
                   </nav>
                   <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35dec2-5d35ddd5" class="nav__btn">
-                    <a href="ota-yhteytta" data-wf--button---primary-overlay--variant="alternate" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component w-variant-7f552dd8-6f55-9529-2d4e-a42d88c80aeb btn--overlay w-inline-block">
+                    <a href="ota-yhteytta.html" data-wf--button---primary-overlay--variant="alternate" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component w-variant-7f552dd8-6f55-9529-2d4e-a42d88c80aeb btn--overlay w-inline-block">
                       <div class="btn__label-wrap btn--overlay">
                         <div class="btn__label btn--overlay">Ota yhteyttä</div>
                         <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
@@ -201,7 +201,7 @@
                         <p>Tyylikäs ja vakuuttava yksisivuinen kotisivu räätälöity juuri sinun yrityksesi tarpeiden mukaan.</p>
                       </div>
                       <div class="pricing__btn">
-                        <a href="tyot" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
+                        <a href="tyot.html" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
                           <div class="btn__label-wrap">
                             <div class="btn__label">Tutustu töihin</div>
                             <div class="btn__label--hidden">Tutustu töihin</div>
@@ -287,7 +287,7 @@
                         <p>Monisivuinen täydenpalvelun kotisivu räätälöity juuri sinun tavoitteidesi mukaan.</p>
                       </div>
                       <div class="pricing__btn">
-                        <a href="tyot" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
+                        <a href="tyot.html" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
                           <div class="btn__label-wrap">
                             <div class="btn__label">Tutustu töihin</div>
                             <div class="btn__label--hidden">Tutustu töihin</div>
@@ -372,7 +372,7 @@
                         <p>Mainosratkaisu, jossa kohdennus, budjetti ja sisältö määritellään yrityksesi tavoitteiden mukaan – ilman jäykkiä paketteja.</p>
                       </div>
                       <div class="pricing__btn">
-                        <a href="tyot" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
+                        <a href="tyot.html" data-wf--button---primary--variant="primary" data-w-id="9bdc0c44-bf74-44a7-8287-298e08422ceb" class="btn__component w-inline-block">
                           <div class="btn__label-wrap">
                             <div class="btn__label">Tutustu töihin</div>
                             <div class="btn__label--hidden">Tutustu töihin</div>
@@ -547,7 +547,7 @@
                         </div>
                       </div>
                       <div class="cta-full__btn w-variant-b7cad2c5-cbfd-0bd7-b9a6-4ab2dbe63394">
-                        <a href="ota-yhteytta" data-wf--button---primary-overlay--variant="primary" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component btn--overlay w-inline-block">
+                        <a href="ota-yhteytta.html" data-wf--button---primary-overlay--variant="primary" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component btn--overlay w-inline-block">
                           <div class="btn__label-wrap btn--overlay">
                             <div class="btn__label btn--overlay">Ota yhteyttä</div>
                             <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
@@ -588,7 +588,7 @@
                   <div href="#" id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a1a1-12c5a19d" class="footer__brand">
                     <div class="footer__about">
                       <div href="#" aria-label="brand logo" class="footer__logo-link">
-                        <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="https://www.nords.fi" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="" class="logo__embed"></a>
+                        <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="index.html" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="" class="logo__embed"></a>
                       </div>
                       <div class="footer__tagline">
                         <p>Me teemme sivut, jotka tukevat kasvua.</p>
@@ -611,22 +611,22 @@
                       </div>
                       <div class="footer__links">
                         <div class="footer__link">
-                          <a href="https://www.nords.fi">Koti</a>
+                          <a href="index.html">Koti</a>
                         </div>
                         <div class="footer__link">
-                          <a href="tiimi">Tiimi</a>
+                          <a href="tiimi.html">Tiimi</a>
                         </div>
                         <div class="footer__link">
-                          <a href="hinnasto" aria-current="page" class="w--current">Hinnasto</a>
+                          <a href="hinnasto.html" aria-current="page" class="w--current">Hinnasto</a>
                         </div>
                         <div class="footer__link">
-                          <a href="tyot">Työt</a>
+                          <a href="tyot.html">Työt</a>
                         </div>
                         <div class="footer__link">
-                          <a href="asiakaspalautteet">Asiakaspalautteet</a>
+                          <a href="asiakaspalautteet.html">Asiakaspalautteet</a>
                         </div>
                         <div class="footer__link">
-                          <a href="ota-yhteytta">Ota yhteyttä</a>
+                          <a href="ota-yhteytta.html">Ota yhteyttä</a>
                         </div>
                       </div>
                     </div>
@@ -660,10 +660,10 @@
                     </div>
                     <div class="footer__legal">
                       <div class="footer__link link--legal">
-                        <a href="tietosuojaseloste">Tietosuojaseloste</a>
+                        <a href="tietosuojaseloste.html">Tietosuojaseloste</a>
                       </div>
                       <div class="footer__link link--legal">
-                        <a href="palveluehdot">Palveluehdot</a>
+                        <a href="palveluehdot.html">Palveluehdot</a>
                       </div>
                     </div>
                   </div>
