--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -29,71 +29,71 @@
               <div>
                 <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35ddd7-5d35ddd5" class="nav__container">
                   <div href="#" id="w-node-eecda7ff-8477-22d2-5106-0fc45d35ddd8-5d35ddd5" class="nav__logo-wrap logo--tablet">
-                    <a href="index.html" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
+                    <a href="https://www.nords.fi" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
                   </div>
                   <nav role="navigation" id="w-node-eecda7ff-8477-22d2-5106-0fc45d35dddb-5d35ddd5" class="nav__menu-wrap w-nav-menu">
                     <div href="#" class="nav__logo-wrap">
-                      <a href="index.html" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
+                      <a href="https://www.nords.fi" aria-label="brand logo" class="nav__logo-link w-inline-block"><img src="images/nords-oy-logo.webp" loading="lazy" alt="" class="nav__logo-embed"></a>
                     </div>
                     <div class="nav__menu menu--desktop">
-                      <a href="index.html" class="nav-link w-inline-block">
+                      <a href="https://www.nords.fi" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Koti</div>
                         </div>
                       </a>
-                      <a href="tiimi.html" class="nav-link w-inline-block">
+                      <a href="tiimi" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Tiimi</div>
                         </div>
                       </a>
-                      <a href="hinnasto.html" class="nav-link w-inline-block">
+                      <a href="hinnasto" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Hinnasto</div>
                         </div>
                       </a>
-                      <a href="tyot.html" class="nav-link w-inline-block">
+                      <a href="tyot" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Työt</div>
                         </div>
                       </a>
-                      <a href="asiakaspalautteet.html" class="nav-link w-inline-block">
+                      <a href="asiakaspalautteet" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Asiakaspalautteet</div>
                         </div>
                       </a>
-                      <a href="ota-yhteytta.html" aria-current="page" class="nav-link w-inline-block w--current">
+                      <a href="ota-yhteytta" aria-current="page" class="nav-link w-inline-block w--current">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Ota yhteyttä</div>
                         </div>
                       </a>
                     </div>
                     <div class="nav__menu menu--tablet">
-                      <a href="index.html" class="nav-link w-inline-block">
+                      <a href="https://www.nords.fi" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Koti</div>
                         </div>
                       </a>
-                      <a href="tiimi.html" class="nav-link w-inline-block">
+                      <a href="tiimi" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Tiimi</div>
                         </div>
                       </a>
-                      <a href="hinnasto.html" class="nav-link w-inline-block">
+                      <a href="hinnasto" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Hinnasto</div>
                         </div>
                       </a>
-                      <a href="tyot.html" class="nav-link w-inline-block">
+                      <a href="tyot" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Työt</div>
                         </div>
                       </a>
-                      <a href="asiakaspalautteet.html" class="nav-link w-inline-block">
+                      <a href="asiakaspalautteet" class="nav-link w-inline-block">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Asiakaspalautteet</div>
                         </div>
                       </a>
-                      <a href="ota-yhteytta.html" aria-current="page" class="nav-link w-inline-block w--current">
+                      <a href="ota-yhteytta" aria-current="page" class="nav-link w-inline-block w--current">
                         <div class="nav-link__label-wrap">
                           <div class="nav-link__label">Ota yhteyttä</div>
                         </div>
@@ -101,7 +101,7 @@
                     </div>
                   </nav>
                   <div id="w-node-eecda7ff-8477-22d2-5106-0fc45d35dec2-5d35ddd5" class="nav__btn">
-                    <a href="ota-yhteytta.html" data-wf--button---primary-overlay--variant="alternate" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" aria-current="page" class="btn__component w-variant-7f552dd8-6f55-9529-2d4e-a42d88c80aeb btn--overlay w-inline-block w--current">
+                    <a href="ota-yhteytta" data-wf--button---primary-overlay--variant="alternate" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" aria-current="page" class="btn__component w-variant-7f552dd8-6f55-9529-2d4e-a42d88c80aeb btn--overlay w-inline-block w--current">
                       <div class="btn__label-wrap btn--overlay">
                         <div class="btn__label btn--overlay">Ota yhteyttä</div>
                         <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
@@ -265,7 +265,7 @@
                           <option value="support">Support</option>
                           <option value="career">Career</option>
                         </select></div><label class="w-checkbox form__field fiel--checkbox">
-                        <div class="w-checkbox-input w-checkbox-input--inputType-custom form__checkbox-icon"></div><input type="checkbox" name="policy" id="policy" data-name="Policy" style="opacity:0;position:absolute;z-index:-1"><span class="form__label w-form-label" for="policy">I read and agree to <a href="palveluehdot.html" class="form__field--span">Terms &amp; Conditions</a> and <a href="tietosuojaseloste.html" class="form__field--span">Privacy Policy</a>.</span>
+                        <div class="w-checkbox-input w-checkbox-input--inputType-custom form__checkbox-icon"></div><input type="checkbox" name="policy" id="policy" data-name="Policy" style="opacity:0;position:absolute;z-index:-1"><span class="form__label w-form-label" for="policy">I read and agree to <a href="palveluehdot" class="form__field--span">Terms &amp; Conditions</a> and <a href="tietosuojaseloste" class="form__field--span">Privacy Policy</a>.</span>
                       </label>
                       <div class="form__btn"><input type="submit" data-wait="Please wait..." class="btn__component btn--form w-button" value="Send message"></div>
                     </form>
@@ -344,13 +344,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="index.html">Home 01</a>
+                    <a href="https://www.nords.fi">Home 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-02.html">Home 02</a>
+                    <a href="home/home-02">Home 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="home/home-03.html">Home 03</a>
+                    <a href="home/home-03">Home 03</a>
                   </div>
                 </div>
               </div>
@@ -367,13 +367,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="product/product-01.html">Product 01</a>
+                    <a href="product/product-01">Product 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-02.html">Product 02</a>
+                    <a href="product/product-02">Product 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="product/product-03.html">Product 03</a>
+                    <a href="product/product-03">Product 03</a>
                   </div>
                 </div>
               </div>
@@ -390,13 +390,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="contact/contact-01.html">Contact 01</a>
+                    <a href="contact/contact-01">Contact 01</a>
                   </div>
                   <div class="modal__link">
-                    <a href="contact/contact-02.html">Contact 02</a>
+                    <a href="contact/contact-02">Contact 02</a>
                   </div>
                   <div class="modal__link">
-                    <a href="ota-yhteytta.html" aria-current="page" class="w--current">Contact 03</a>
+                    <a href="ota-yhteytta" aria-current="page" class="w--current">Contact 03</a>
                   </div>
                 </div>
               </div>
@@ -413,19 +413,19 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="hinnasto.html">Pricing</a>
+                    <a href="hinnasto">Pricing</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tiimi.html">Company</a>
+                    <a href="tiimi">Company</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tyot.html">Career</a>
+                    <a href="tyot">Career</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/demo.html">Demo</a>
+                    <a href="company/demo">Demo</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/coming-soon.html">Coming Soon</a>
+                    <a href="company/coming-soon">Coming Soon</a>
                   </div>
                 </div>
               </div>
@@ -471,13 +471,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="resource/resources.html">Resources</a>
+                    <a href="resource/resources">Resources</a>
                   </div>
                   <div class="modal__link">
-                    <a href="resource/guide.html">Guide</a>
+                    <a href="resource/guide">Guide</a>
                   </div>
                   <div class="modal__link">
-                    <a href="resource/blog.html">Blog</a>
+                    <a href="resource/blog">Blog</a>
                   </div>
                 </div>
               </div>
@@ -494,13 +494,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="palveluehdot.html">Terms &amp; Conditions</a>
+                    <a href="palveluehdot">Terms &amp; Conditions</a>
                   </div>
                   <div class="modal__link">
-                    <a href="tietosuojaseloste.html">Privacy Policy</a>
+                    <a href="tietosuojaseloste">Privacy Policy</a>
                   </div>
                   <div class="modal__link">
-                    <a href="legal/cookie-policy.html">Cookie Policy</a>
+                    <a href="legal/cookie-policy">Cookie Policy</a>
                   </div>
                 </div>
               </div>
@@ -517,13 +517,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="auth/sign-in.html">Sign In</a>
+                    <a href="auth/sign-in">Sign In</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/sign-up.html">Sign Up</a>
+                    <a href="auth/sign-up">Sign Up</a>
                   </div>
                   <div class="modal__link">
-                    <a href="auth/password-reset.html">Password Reset</a>
+                    <a href="auth/password-reset">Password Reset</a>
                   </div>
                 </div>
               </div>
@@ -540,13 +540,13 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="search.html">Search</a>
+                    <a href="search">Search</a>
                   </div>
                   <div class="modal__link">
-                    <a href="401.html">Login</a>
+                    <a href="401">Login</a>
                   </div>
                   <div class="modal__link">
-                    <a href="404.html">Not Found</a>
+                    <a href="404">Not Found</a>
                   </div>
                 </div>
               </div>
@@ -563,16 +563,16 @@
                 </div>
                 <div class="modal__links">
                   <div class="modal__link">
-                    <a href="documentation/instructions.html">Instructions</a>
+                    <a href="documentation/instructions">Instructions</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/style-guide.html">Style Guide</a>
+                    <a href="documentation/style-guide">Style Guide</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/licenses.html">Licenses</a>
+                    <a href="documentation/licenses">Licenses</a>
                   </div>
                   <div class="modal__link">
-                    <a href="documentation/changelog.html">Changelog</a>
+                    <a href="documentation/changelog">Changelog</a>
                   </div>
                 </div>
               </div>
@@ -603,7 +603,7 @@
                   <div href="#" id="w-node-db5ebe1c-6347-f700-2222-c0f512c5a1a1-12c5a19d" class="footer__brand">
                     <div class="footer__about">
                       <div href="#" aria-label="brand logo" class="footer__logo-link">
-                        <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="index.html" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="" class="logo__embed"></a>
+                        <a aria-label="brand logo" data-wf--brand---logo--variant="primary" href="https://www.nords.fi" class="logo__component w-inline-block"><img src="images/nords-oy-logo-valkoinen.webp" loading="lazy" alt="" class="logo__embed"></a>
                       </div>
                       <div class="footer__tagline">
                         <p>Me teemme sivut, jotka tukevat kasvua.</p>
@@ -626,22 +626,22 @@
                       </div>
                       <div class="footer__links">
                         <div class="footer__link">
-                          <a href="index.html">Koti</a>
+                          <a href="https://www.nords.fi">Koti</a>
                         </div>
                         <div class="footer__link">
-                          <a href="tiimi.html">Tiimi</a>
+                          <a href="tiimi">Tiimi</a>
                         </div>
                         <div class="footer__link">
-                          <a href="hinnasto.html">Hinnasto</a>
+                          <a href="hinnasto">Hinnasto</a>
                         </div>
                         <div class="footer__link">
-                          <a href="tyot.html">Työt</a>
+                          <a href="tyot">Työt</a>
                         </div>
                         <div class="footer__link">
-                          <a href="asiakaspalautteet.html">Asiakaspalautteet</a>
+                          <a href="asiakaspalautteet">Asiakaspalautteet</a>
                         </div>
                         <div class="footer__link">
-                          <a href="ota-yhteytta.html" aria-current="page" class="w--current">Ota yhteyttä</a>
+                          <a href="ota-yhteytta" aria-current="page" class="w--current">Ota yhteyttä</a>
                         </div>
                       </div>
                     </div>
@@ -675,10 +675,10 @@
                     </div>
                     <div class="footer__legal">
                       <div class="footer__link link--legal">
-                        <a href="tietosuojaseloste.html">Tietosuojaseloste</a>
+                        <a href="tietosuojaseloste">Tietosuojaseloste</a>
                       </div>
                       <div class="footer__link link--legal">
-                        <a href="palveluehdot.html">Palveluehdot</a>
+                        <a href="palveluehdot">Palveluehdot</a>
                       </div>
                     </div>
                   </div>
